--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,71 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <link rel="stylesheet" href="css/main.css">
   <title>Instagram</title>
 </head>
 <body>
-  Instagram
+  <div class="container">
+    <div class="flDiv">
+      <img src="./images/phones.png" alt="iPhone">
+    </div>
+    <div class="flDiv2">
+    <div class=" brand">
+      <img src="./images/brand.png" alt="iPhone displaying Instagram">
+    </div>
+    <div class="" id="homebt">
+      <button class="loginbt button"><img src="./images/home.png" alt="Home button displayed"/>Log in</button>
+    </div>
+  </div>
 
-  Capture and Share the World's Moments
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+<!-- Text Content div -->
 
-  Oh yeah, did we mention it's free?
 
-  Download on the App Store
-  Get it on Google Play
+  <div class="flDiv32" >
+    <h2>Capture and Share <br> the World's Moments</h2>
+      <p>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+      Instagram is a <b>fast,</b> <b>beautiful</b> and <b>fun</b> way to share your life with friends and family.
+      <br>
+      <br>
 
-  &copy; 2014 Instagram
+      Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash;
+      it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+      <br>
+      <br>
+      Oh yeah, did we mention it's free?
+
+      Download on the App Store
+      Get it on Google Play
+    </p>
+        <div class="iphone fleft"><img src="./images/badge-iphone.png" alt="Get it for iphone"></div>
+        <div class="android fleft"><img src="./images/badge-android.png" alt="Get it for Android"></div>
+      </div>
+    </div>
+
+    <div class="Blu">
+
+    </div>
+    <div class="bothalf">
+
+    </div>
+
+    <footer>
+      <a href="#">About Us</a>
+      <a href="#">Support</a>
+      <a href="#">Blog</a>
+      <a href="#">Press</a>
+      <a href="#">API</a>
+      <a href="#">Jobs</a>
+      <a href="#">Privacy</a>
+      <a href="#">Terms</a>
+
+      <p>&copy; 2014 Instagram</p>
+    </footer>
+
+</div>
+  <!-- <div class="clear"></div> -->
 </body>
 </html>
